--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16"
+    "mongoose": "^6.0.13"
   }
 }
